Try to unlock (PIN/PUK) and enable modem before connecting to Gsm connections.

BUG: 264083