libs/service/pindialog.h
@@ -1,0 +1,58 @@
+/*
+Copyright 2011 Lamarque Souza <lamarque@gmail.com>
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License as
+published by the Free Software Foundation; either version 2 of
+the License or (at your option) version 3 or any later version
+accepted by the membership of KDE e.V. (or its successor approved
+by the membership of KDE e.V.), which shall act as a proxy
+defined in Section 14 of version 3 of the license.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+#ifdef COMPILE_MODEM_MANAGER_SUPPORT
+#ifndef PINDIALOG_H
+#define PINDIALOG_H
+
+#include <QWidget>
+#include "ui_pinwidget.h"
+
+#include <KDialog>
+#include <KLocale>
+#include <KPushButton>
+
+class PinWidget;
+
+class PinDialog : public KDialog
+{
+Q_OBJECT
+public:
+    enum Type {Pin, PinPuk};
+
+    PinDialog(const Type type = Pin, QWidget *parent=0);
+    ~PinDialog();
+
+    Type type() const;
+    QString pin() const;
+    QString puk() const;
+
+protected Q_SLOTS:
+    void chkShowPassToggled();
+protected:
+    Ui::PinWidget * ui;
+    QLabel* pixmapLabel;
+private:
+    Type m_type;
+};
+
+#endif
+
+#endif
